<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.weather.WeatherDetailFragment">

    <ImageView
        android:id="@+id/iv_gallery"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_bg"
        android:scaleType="fitXY"
        android:src="@drawable/sunny"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_navbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/nav_icon"
                android:src="@drawable/ic_back"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/no_location"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:alpha="0.8"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Kovilpatti" />

            <TextView
                android:id="@+id/tv_current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/tv_city_name"
                app:layout_constraintStart_toStartOf="@id/tv_city_name"
                app:layout_constraintTop_toBottomOf="@id/tv_city_name"
                tools:text="Saturday, May 28, 12:07 AM" />

            <TextView
                android:id="@+id/tv_degree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/white"
                android:textSize="100sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_current_time"
                tools:text="32\u2103" />

            <View
                android:id="@+id/view_line"
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:background="@drawable/dashed_line"
                app:layout_constraintEnd_toEndOf="@id/tv_degree"
                app:layout_constraintStart_toStartOf="@id/tv_degree"
                app:layout_constraintTop_toBottomOf="@id/tv_degree" />

            <TextView
                android:id="@+id/tv_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_line"
                tools:text="Sunny" />

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/weather_icon"
                android:src="@drawable/cloud"
                app:layout_constraintEnd_toEndOf="@id/tv_condition"
                app:layout_constraintStart_toStartOf="@id/tv_condition"
                app:layout_constraintTop_toBottomOf="@id/tv_condition" />

            <TextView
                android:id="@+id/tv_air_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/transparent_background"
                android:fontFamily="@font/roboto_bold"
                android:padding="5dp"
                android:text="@string/air_quality"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/tv_condition"
                app:layout_constraintStart_toStartOf="@id/tv_condition"
                app:layout_constraintTop_toBottomOf="@id/iv_icon" />


            <TextView
                android:id="@+id/tv_aq_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/co"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@id/tv_aq_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_air_quality" />

            <TextView
                android:id="@+id/tv_aq_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/no_u2082"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_aq_1"
                app:layout_constraintEnd_toStartOf="@id/tv_aq_3"
                app:layout_constraintStart_toEndOf="@id/tv_aq_1"
                app:layout_constraintTop_toTopOf="@id/tv_aq_1" />

            <TextView
                android:id="@+id/tv_aq_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/o_u2083"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_aq_1"
                app:layout_constraintEnd_toStartOf="@id/tv_aq_4"
                app:layout_constraintStart_toEndOf="@id/tv_aq_2"
                app:layout_constraintTop_toTopOf="@id/tv_aq_1" />

            <TextView
                android:id="@+id/tv_aq_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/so_u2082"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_aq_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_aq_3"
                app:layout_constraintTop_toTopOf="@id/tv_aq_1" />

            <TextView
                android:id="@+id/tv_aqr_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/transparent_background"
                android:fontFamily="@font/roboto_medium"
                android:maxLength="5"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/tv_aq_1"
                app:layout_constraintStart_toStartOf="@id/tv_aq_1"
                app:layout_constraintTop_toBottomOf="@id/tv_aq_1"
                tools:text="293.7" />

            <TextView
                android:id="@+id/tv_aqr_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/transparent_background"
                android:fontFamily="@font/roboto_medium"
                android:maxLength="5"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/tv_aq_2"
                app:layout_constraintStart_toStartOf="@id/tv_aq_2"
                app:layout_constraintTop_toBottomOf="@id/tv_aq_1"
                tools:text="5.36" />

            <TextView
                android:id="@+id/tv_aqr_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/transparent_background"
                android:fontFamily="@font/roboto_medium"
                android:maxLength="5"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/tv_aq_3"
                app:layout_constraintStart_toStartOf="@id/tv_aq_3"
                app:layout_constraintTop_toBottomOf="@id/tv_aq_1"
                tools:text="50.79" />

            <TextView
                android:id="@+id/tv_aqr_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/transparent_background"
                android:fontFamily="@font/roboto_medium"
                android:maxLength="5"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/tv_aq_4"
                app:layout_constraintStart_toStartOf="@id/tv_aq_4"
                app:layout_constraintTop_toBottomOf="@id/tv_aq_1"
                tools:text="5.3" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_users"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_aqr_1"
                tools:listitem="@layout/weather_list_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>